# remembear

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  remembear.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: audit.yml  build.yml
migrations/2020-06-16-055646_users/: up.sql
migrations/2020-06-30-015438_reminders/: down.sql  up.sql
migrations/2020-08-16-060927_integrations/: down.sql  up.sql
src/: lib.rs  main.rs
src/command/: mod.rs  reminder.rs  user.rs
src/config/: error.rs  mod.rs
src/database/: error.rs  mod.rs  schema.rs  sqlite.rs
src/integration/: error.rs  mod.rs  model.rs  provider.rs
src/integration/console/: command.rs  mod.rs
src/reminder/: error.rs  mod.rs  provider.rs
src/reminder/model/: mod.rs  new_reminder.rs  reminder.rs  updated_reminder.rs
src/schedule/: error.rs  mod.rs  model.rs
src/schedule/provider/: mod.rs
src/schedule/provider/model/: mod.rs  stored_assignees.rs  stored_iso_week.rs  stored_weekly_times.rs
src/scheduler/: error.rs  mod.rs  model.rs
src/user/: error.rs  mod.rs  model.rs  provider.rs
tests/: command.rs  command_reminder.rs  command_start.rs  command_user.rs  config.rs  database.rs  integration.rs  reminder.rs  schedule.rs  user.rs
tests/assets/: invalid_config.yml  valid_config.yml
tests/common/: mod.rs
tests/common_command/: mod.rs
tests/common_database/: mod.rs
