[package]
name = "remembear"
version = "0.1.0"
authors = ["Catherine Hart"]
description = "Self-hosted web app for recurring reminders"
homepage = "https://github.com/codehearts/remembear"
repository = "https://github.com/codehearts/remembear"
documentation = "https://docs.rs/remembear"
license = "MIT"
edition = "2018"

[dependencies]
config = { version="0.10.1", default-features=false, features=["yaml"] }
diesel = { version="1.4", default-features=false, features=["sqlite"] }
serde = { version="1.0", default-features=false, features=["std", "derive"] }
thiserror = "1.0"

[dev-dependencies]
cargo-husky = { version="1.5", features=["run-cargo-fmt", "run-cargo-clippy"] }
diesel_migrations = { version = "1.4", features=["sqlite"] }
mockall = "0.7"
