[package]
name = "remembear"
version = "0.1.0"
authors = ["Catherine Hart"]
description = "Self-hosted web app for recurring reminders"
homepage = "https://github.com/codehearts/remembear"
repository = "https://github.com/codehearts/remembear"
documentation = "https://docs.rs/remembear"
license = "MIT"
edition = "2018"

[dependencies]
chrono = { version="0.4", default-features=false, features=["clock", "serde"] }
config = { version="0.10", default-features=false, features=["yaml"] }
diesel = { version="1.4", default-features=false, features=["sqlite"] }
serde = { version="1.0", default-features=false, features=["derive", "std"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version="0.2", default-features=false, features=["macros", "rt-threaded", "stream", "time"] }
thiserror = "1.0"

[dev-dependencies]
cargo-husky = { version="1.5", features=["run-cargo-fmt", "run-cargo-clippy"] }
diesel_migrations = { version = "1.4", features=["sqlite"] }
mockall = "0.8"
