[package]
name = "remembear"
version = "0.1.0"
authors = ["Catherine Hart"]
description = "Self-hosted web app for recurring reminders"
homepage = "https://github.com/codehearts/remembear"
repository = "https://github.com/codehearts/remembear"
documentation = "https://docs.rs/remembear"
license = "MIT"
edition = "2021"

[dependencies]
config = { version="0.11", default-features=false, features=["yaml"] }
diesel = { version="1.4", default-features=false, features=["sqlite"] }
serde = { version="1.0", default-features=false, features=["derive", "std"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
time = { version="0.3", default-features=false, features=["local-offset", "macros", "serde", "serde-human-readable", "std"] }
tokio = { version="1.23", default-features=false, features=["macros", "rt-multi-thread", "time"] }
tokio-stream = { version="0.1", default-features=false }
tokio-util = { version="0.6", default-features=false, features=["time"] }

# Console integration
colored = { version="2.0", default-features=false }

[dev-dependencies]
cargo-husky = { version="1.5", features=["run-cargo-fmt", "run-cargo-clippy"] }
diesel_migrations = { version = "1.4", features=["sqlite"] }
mockall = "0.11"
